# env-monitor

./: .gitignore  CMakeLists.txt  README.md  main.py  server_start.sh
components/dht11_driver/: CMakeLists.txt
components/dht11_driver/include/: dht11_driver.h
components/dht11_driver/src/: dht11_driver.c
components/driver_relay/: CMakeLists.txt
components/driver_relay/include/: driver_relay.h
components/driver_relay/src/: driver_relay.c
components/driver_sht3x/: CMakeLists.txt
components/driver_sht3x/include/: driver_sht3x.h
components/driver_sht3x/src/: driver_sht3x.c
components/service_mqtt/: CMakeLists.txt
components/service_mqtt/include/: service_mqtt.h
components/service_mqtt/src/: service_mqtt.c
components/service_wifi/: CMakeLists.txt
components/service_wifi/include/: service_wifi.h
components/service_wifi/src/: service_wifi.c
components/sht3x/include/: sht3x.h
components/sht3x/src/: sht3x.c
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_controller.c  app_controller.h  app_main.c  main.c
software/: fastapi_setup.sh  flask_setup.sh  main.py  requirements.txt  server_setup.sh  server_start.sh
software/templates/: index.html
